# ask-sql-chatbot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: ai.py  chatbot.py  database.py  prompt.py  settings.py
docker/: init.sql
